--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -58,6 +58,43 @@ if(GEOS_ENABLE_MACOSX_FRAMEWORK)
     install(CODE "execute_process(COMMAND ln -sfh Versions/Current/unix \"${GEOS_FWDIR}/unix\")")
   endif()
 
+elseif (MSVC)
+  message(STATUS "Using MSVC")
+  file(GLOB_RECURSE geos_ALL_HEADERS ${CMAKE_SOURCE_DIR}/include/*.h) # fix source_group issue
+  if(GEOS_BUILD_SHARED)
+    add_library(geos SHARED ${geos_SOURCES} ${geos_ALL_HEADERS})
+
+    set_target_properties(geos
+      PROPERTIES
+      DEFINE_SYMBOL GEOS_DLL_EXPORT
+      VERSION ${VERSION}
+      CLEAN_DIRECT_OUTPUT 1)
+
+    install(TARGETS geos
+      RUNTIME DESTINATION bin
+      LIBRARY DESTINATION lib
+      ARCHIVE DESTINATION lib)
+  endif()
+
+  if(GEOS_BUILD_STATIC)
+    add_library(geos-static STATIC ${geos_SOURCES} ${geos_ALL_HEADERS})
+
+    set_target_properties(geos-static
+      PROPERTIES
+      OUTPUT_NAME "geos"
+      PREFIX "lib"
+      CLEAN_DIRECT_OUTPUT 1)
+
+    install(TARGETS geos-static
+      RUNTIME DESTINATION bin
+      LIBRARY DESTINATION lib
+      ARCHIVE DESTINATION lib)
+  endif()
+  #################################################################################
+  # Group source files for IDE source explorers (e.g. Visual Studio)
+  #################################################################################
+  GenerateSourceGroups(src)
+
 else()
   # this is the "object library" target: compiles the sources only once
   add_library(geoslib OBJECT ${geos_SOURCES})
@@ -108,7 +145,3 @@ endif() # (GEOS_ENABLE_MACOSX_FRAMEWORK)
 # endif()
 
 
-#################################################################################
-# Group source files for IDE source explorers (e.g. Visual Studio)
-#################################################################################
-GenerateSourceGroups(src)
