--- a/configure.ac
+++ b/configure.ac
@@ -14,17 +14,17 @@ dnl -- JTS_PORT: the version of JTS this release is bound to
 JTS_PORT=1.13.0
 
 dnl -- Version info for the CAPI
-CAPI_INTERFACE_CURRENT=12
+CAPI_INTERFACE_CURRENT=13
 CAPI_INTERFACE_REVISION=0
-CAPI_INTERFACE_AGE=11
+CAPI_INTERFACE_AGE=12
 
 dnl
 dnl -- Release versions / C++ library SONAME will use these
 dnl -- encoding ABI break at every release
 dnl
 VERSION_MAJOR=3
-VERSION_MINOR=7
-VERSION_PATCH=0rc1
+VERSION_MINOR=8
+VERSION_PATCH=0dev
 VERSION="$VERSION_MAJOR.$VERSION_MINOR.$VERSION_PATCH"
 VERSION_RELEASE=`echo "$VERSION" | sed -E 's/^([[0-9]+\.[0-9]+\.[0-9]+]).*?$/\1/'`
 
