Add comment explaining GEOSEqualsExact
Closes #731

--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -1750,9 +1750,18 @@ extern char GEOS_DLL GEOSWithin(const GEOSGeometry* g1, const GEOSGeometry* g2);
 extern char GEOS_DLL GEOSContains(const GEOSGeometry* g1, const GEOSGeometry* g2);
 extern char GEOS_DLL GEOSOverlaps(const GEOSGeometry* g1, const GEOSGeometry* g2);
 extern char GEOS_DLL GEOSEquals(const GEOSGeometry* g1, const GEOSGeometry* g2);
-extern char GEOS_DLL GEOSEqualsExact(const GEOSGeometry* g1, const GEOSGeometry* g2, double tolerance);
 extern char GEOS_DLL GEOSCovers(const GEOSGeometry* g1, const GEOSGeometry* g2);
 extern char GEOS_DLL GEOSCoveredBy(const GEOSGeometry* g1, const GEOSGeometry* g2);
+
+/**
+ * Determine pointwise equivalence of two geometries, by checking if each vertex of g2 is
+ * within tolerance of the corresponding vertex in g1.
+ * Unlike GEOSEquals, geometries that are topologically equivalent but have different
+ * representations (e.g., LINESTRING (0 0, 1 1) and MULTILINESTRING ((0 0, 1 1)) ) are not
+ * considered equivalent by GEOSEqualsExact.
+ * returns 2 on exception, 1 on true, 0 on false
+ */
+extern char GEOS_DLL GEOSEqualsExact(const GEOSGeometry* g1, const GEOSGeometry* g2, double tolerance);
 
 /************************************************************************
  *
