Fixed documented return codes of GEOSGeomGetX() and friends.

--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -1066,7 +1066,7 @@ extern int GEOS_DLL GEOSGetNumInteriorRings_r(GEOSContextHandle_t handle,
 extern int GEOS_DLL GEOSGeomGetNumPoints_r(GEOSContextHandle_t handle,
                                        const GEOSGeometry* g);
 
-/* Return -1 on exception, Geometry must be a Point. */
+/* Return 0 on exception, otherwise 1, Geometry must be a Point. */
 extern int GEOS_DLL GEOSGeomGetX_r(GEOSContextHandle_t handle, const GEOSGeometry *g, double *x);
 extern int GEOS_DLL GEOSGeomGetY_r(GEOSContextHandle_t handle, const GEOSGeometry *g, double *y);
 extern int GEOS_DLL GEOSGeomGetZ_r(GEOSContextHandle_t handle, const GEOSGeometry *g, double *z);
@@ -1991,7 +1991,7 @@ extern int GEOS_DLL GEOSGetNumInteriorRings(const GEOSGeometry* g);
 /* Return -1 on exception, Geometry must be a LineString. */
 extern int GEOS_DLL GEOSGeomGetNumPoints(const GEOSGeometry* g);
 
-/* Return -1 on exception, Geometry must be a Point. */
+/* Return 0 on exception, otherwise 1, Geometry must be a Point. */
 extern int GEOS_DLL GEOSGeomGetX(const GEOSGeometry *g, double *x);
 extern int GEOS_DLL GEOSGeomGetY(const GEOSGeometry *g, double *y);
 extern int GEOS_DLL GEOSGeomGetZ(const GEOSGeometry *g, double *z);
