Remove explicit call to php-config Closes #772 <wraeth>

--- a/php/Makefile.am
+++ b/php/Makefile.am
@@ -57,6 +57,6 @@ geos_la_CPPFLAGS = $(AM_CPPFLAGS) \
 
 install: all
 	$(INSTALL) -d "$(DESTDIR)"/`$(PHP_CONFIG) --extension-dir`
-	$(INSTALL) -m 755 .libs/geos.so "$(DESTDIR)"/`php-config --extension-dir`
+	$(INSTALL) -m 755 .libs/geos.so "$(DESTDIR)"/`$(PHP_CONFIG) --extension-dir`
 
 endif
