Modernize CMake configuration
Refactoring based on practices of the Modern CMake approach:

* Set project version based on `version.txt` spec.
* Build shared libraries by default.
* Build tools and `geos-config` script.
* Add make `check` target to run `ctest` (no dependencies).
* Move failing/overlarge tests into `failure` directory.
* Add target to deploy Config-module with installed targets:
  `GEOS::geos`, `GEOS::geos_c`.
* Add basic uninstall target
* Add basic client example configured with CMake to use GEOS targets.

--- a/capi/CMakeLists.txt
+++ b/capi/CMakeLists.txt
@@ -1,75 +1,47 @@
-#################################################################################
+################################################################################
+# Part of CMake configuration for GEOS
 #
-# GEOS C library build configuration for CMake build system
-#
-# Copyright (C) 2009 Mateusz Loskot <mateusz@loskot.net>
+# Copyright (C) 2018 Mateusz Loskot <mateusz@loskot.net>
 #
 # This is free software; you can redistribute and/or modify it under
 # the terms of the GNU Lesser General Public Licence as published
 # by the Free Software Foundation.
 # See the COPYING file for more information.
-#
-#################################################################################
+################################################################################
 
-if(WIN32)
-    add_definitions("-DGEOS_DLL_EXPORT=1")
-endif()
-
-set(geos_c_SOURCES
-  geos_c.cpp
-  geos_ts_c.cpp)
-
-file(GLOB geos_capi_HEADERS ${CMAKE_BINARY_DIR}/capi/*.h) # fix source_group issue
-
-if(NOT GEOS_ENABLE_MACOSX_FRAMEWORK AND GEOS_BUILD_SHARED)
-  # if building OS X framework or only building static libs, CAPI built into C++ library
-  add_library(geos_c SHARED ${geos_c_SOURCES})
-
-  target_link_libraries(geos_c geos)
-
-  if (WIN32)
-    set_target_properties(geos_c
-      PROPERTIES
-      VERSION ${CAPI_VERSION}
-      CLEAN_DIRECT_OUTPUT 1)
-  else()
-    set_target_properties(geos_c
-      PROPERTIES
-      VERSION ${CAPI_VERSION}
-      SOVERSION ${CAPI_SOVERSION}
-      CLEAN_DIRECT_OUTPUT 1)
-  endif()
-
-  add_dependencies(geos_c geos_revision)
-
+if(GEOS_BUILD_FROM_GIT)
+  add_custom_target(geos_revision_header
+    COMMAND ${CMAKE_COMMAND}
+    -D DST=${CMAKE_BINARY_DIR}/geos_revision.h
+    -D CMAKE_MODULE_PATH="${PROJECT_SOURCE_DIR}/cmake"
+    -P ${CMAKE_SOURCE_DIR}/cmake/GenerateRevisionHeader.cmake
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
 else()
-  add_library(geos_c INTERFACE)
-  target_link_libraries(geos_c INTERFACE geos-static)
+  add_library(geos_revision_header INTERFACE)
 endif()
 
+add_dependencies(geos_c geos_revision_header)
 
-#################################################################################
-# Installation
-#################################################################################
+file(GLOB_RECURSE _headers ${CMAKE_CURRENT_LIST_DIR}/*.cpp  CONFIGURE_DEPEND)
+target_sources(geos_c PRIVATE ${_headers})
+unset(_headers)
 
-if(APPLE AND GEOS_ENABLE_MACOSX_FRAMEWORK)
-  install(FILES ${CMAKE_CURRENT_BINARY_DIR}/geos_c.h
-    DESTINATION GEOS.framework/Versions/${VERSION_MAJOR}/Headers)
-  install(CODE "execute_process(COMMAND sed -E -i \"\" \"s,# *include[[:space:]]+<geos/,#include <GEOS/,g\" \"$ENV{DESTDIR}${CMAKE_INSTALL_PREFIX}/GEOS.framework/Versions/${VERSION_MAJOR}/Headers/geos_c.h\")")
-else()
-  install(FILES ${CMAKE_CURRENT_BINARY_DIR}/geos_c.h
-    DESTINATION include)
-endif()
+target_include_directories(geos_c
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
+    $<INSTALL_INTERFACE:include/geos>)
 
-if(NOT GEOS_ENABLE_MACOSX_FRAMEWORK AND GEOS_BUILD_SHARED)
-  install(TARGETS geos_c
-    RUNTIME DESTINATION bin
-    LIBRARY DESTINATION lib
-    ARCHIVE DESTINATION lib)
-endif()
+set(VERSION ${GEOS_VERSION})
+set(VERSION_MAJOR ${GEOS_VERSION_MAJOR})
+set(VERSION_MINOR ${GEOS_VERSION_MINOR})
+set(VERSION_PATCH ${GEOS_VERSION_PATCH})
 
-#################################################################################
-# Group source files for IDE source explorers (e.g. Visual Studio)
-#################################################################################
+configure_file(
+  ${CMAKE_CURRENT_LIST_DIR}/geos_c.h.in
+  ${CMAKE_CURRENT_BINARY_DIR}/geos_c.h
+  @ONLY)
 
-source_group("Header Files" FILES ${geos_capi_HEADERS})
+unset(VERSION)
+unset(VERSION_MAJOR)
+unset(VERSION_MINOR)
+unset(VERSION_PATCH)
